# rp2040-hotword-recognition

./: .gitignore  README.md  build-all.sh  config.ini  configure.sh  install-dependencies.sh  install-udev-rules.sh  start-client.sh  start-server.sh  update-rp2040-wifinina-firmware.sh
netlog-monitor/: .gitignore
rp2040-hotword-recognition-client/: platformio-config.py  platformio.ini
rp2040-hotword-recognition-client/src/: audio_provider.cpp  command_responder.cpp  command_responder.h  main_functions.cpp  ssl_client.cpp  ssl_client.h
rp2040-hotword-recognition-client/src/micro_features/: micro_model_settings.h
ssl-server/: CMakeLists.txt
ssl-server/src/: hash.c  hash.h  kvs.c  kvs.h  myssl.c  myssl.h  panic.c  panic.h  server.c
